<resources>
    <string name="app_name">UdemyKotlin</string>
    <string name="enter_number">Enter Number</string>
    <string name="str_click">click</string>
    <string name="weight_in_kg">Weight in KG</string>
    <string name="height_in_meter">Height in Meter</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_image_desc">Image according to yout bmi</string>
    <string name="play_audio">Click to Play Audio</string>
    <string name="str_name">name</string>
    <string name="str_age">Age : %d</string>
    <string name="str_age_tools">Age : 30</string>
    <string name="str_weight">Weight :</string>
    <string name="str_hint_weight">weight</string>
    <string name="str_man">man</string>
    <string name="str_woman">woman</string>
    <string name="str_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="str_terms_text">What’s covered in these terms We know it’s tempting to skip these
        Terms of Service, but it’s important to establish what you can expect from us as you use
        Google services, and what we expect from you.  These Terms of Service reflect the way
        Google’s business works, the laws that apply to our company, and certain things we’ve always
        believed to be true. As a result, these Terms of Service help define Google’s relationship
        with you as you interact with our services. For example, these terms include the following
        topic headings:      What you can expect from us, which describes how we provide and
        develop our services     What we expect from you, which establishes certain rules for
        using our services     Content in Google services, which describes the intellectual
        property rights to the content you find in our services — whether that content belongs
        to you, Google, or others     In case of problems or disagreements, which describes other
        legal rights you have, and what to expect in case someone violates these terms
        Understanding these terms is important because, by using our services, you’re agreeing to
        these terms.  Besides these terms, we also publish a Privacy Policy. Although it’s not part
        of these terms, we encourage you to read it to better understand how you can update, manage,
        export, and delete your information.
        Service provider
        Google services are provided by, and you’re contracting with:

        Google LLC
        organized under the laws of the State of Delaware, USA, and operating under the laws of the USA

        1600 Amphitheatre Parkway
        Mountain View, California 94043
        USA
        Age requirements

        If you’re under the age required to manage your own Google Account, you must have your parent or legal guardian’s permission to use a Google Account. Please have your parent or legal guardian read these terms with you.

        If you’re a parent or legal guardian, and you allow your child to use the services, then these terms apply to you and you’re responsible for your child’s activity on the services.

    Some Google services have additional age requirements as described in their service-specific additional terms and policies.</string>
    <string-array name="list_of_units">
        <item>Kilogram</item>
        <item>Pound</item>
        <item>Gram</item>
    </string-array>
    <string name="edit_text_string">Search your word</string>
    <string name="button_text">Find</string>
    <string name="tools_definition">My Definition</string>
    <string name="str_back_desc">back to search word</string>
    <string name="str_word_not_found">Word not found!</string>
    <string name="search">Search</string>
    <string name="search_your_topic">Search Your topic</string>
    <string name="load_more">Load More</string>
    <string name="str_country_name">germany</string>
    <string name="str_location_text_view">location</string>
    <string name="str_first_edit_text_hint">your location</string>
    <string name="str_text_view_town">town</string>
    <string name="str_edit_text_town">your town</string>
    <string name="str_button_cancel">Cancel</string>
    <string name="str_button_confirm">confirm</string>
    <string name="str_image_view_description">description</string>
    <string name="str_image_view_two_description">description2</string>
    <string name="str_about">Germany is a Western European country with a landscape of forests, rivers, mountain ranges and North Sea beaches. It has over 2 millennia of history. Berlin, its capital, is home to art and nightlife scenes, the Brandenburg Gate and many sites relating to WWII. Munich is known for its Oktoberfest and beer halls, including the 16th-century Hofbräuhaus. Frankfurt, with its skyscrapers, houses the European Central Bank.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_ten_times">10 Times</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="exercise_text_view">%d times</string>
    <string name="toolbar_title">Exercise Number: (%d/%d)</string>
    <string name="go">GO!</string>
    <string name="exercise_text_view_tools">10 times</string>
    <string name="next_button_string">next</string>
    <string name="exit_button_string">exit</string>
    <string name="title_android_fitness_exercise">Exercise Number: (%d/%d)</string>
    <string name="congrats_image_view">congrats</string>
    <string name="go_button">GO!</string>
    <string name="try_again_string">try again</string>
    <string name="next_workout_string">next workout</string>
    <string name="try_again_description">try again</string>
    <string name="about_fitness_app">in this app we will learn about navigation.\n\nnavigation will give us a greate
        view of
        our app
    </string>
    <string name="about_app_description">about the fitness app</string>
    <string name="about_string">About</string>
    <string name="current_date_text_string">current date</string>
    <string name="title_hint">title</string>
    <string name="diary_hint">your diary</string>
    <string name="save_diary">save</string>
    <string name="delete_diary">delete</string>
    <string name="diary_recycler_date">diary date</string>
    <string name="diary_recycler_title_text_view">diary title</string>
    <string name="add_diary">Add Diary</string>
    <string name="item">Item</string>
    <string name="header_image_description">headerImage</string>
    <string name="poster_image_description">poster description</string>
    <string name="avengers_text">Marvel\'s Avengers: Infinity War</string>
    <string name="bookmark_description">bookmark description</string>
    <string name="movie_details_string">April 2018 12 149 minutes</string>
    <string name="rent">$4.99 Rent</string>
    <string name="buy">$14.99 Buy</string>
    <string name="rating_polygon_description">rating description</string>
    <string name="fab_rating_text">7,936 rating</string>
    <string name="fab_family_text">Family</string>
    <string name="fab_rotten_tomato_text">84%</string>
    <string name="fab_simalar_text">Similar</string>
    <string name="movie_description">Superheroes amass to stop intergalactic sociopath Thanos from acquiring a full set of Infinity Stones and wiping out half of all life in the universe. </string>
    <string name="past_string">00:00</string>
    <string name="remain_string">3:32</string>
    <string name="song_string">song name</string>
    <string name="artist_string">artist name</string>
    <string name="previous_song">Previous Song</string>
    <string name="next_song">Next Song</string>
    <string name="add_image_description_string">add an image message</string>
    <string name="message_hint_string">message</string>
    <string name="send_button_string">send</string>
    <string name="google_sign_in_string">Sign in with Google</string>
    <string name="sign_out_string">sign out</string>
    <string name="message_text_view_string">message text view</string>
    <string name="messenger_text_view_string">messenger text</string>
    <string name="image_description">image desc</string>
    <string name="invitation_title">chat app invite</string>
    <string name="invite_message">Please join me for a chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invite_string">invite</string>
    <string name="fragment_two">Fragment two</string>
    <string name="fragment_three">Fragment Three</string>
    <string name="best_seller_books_string">Best Seller</string>
    <string name="children_books_string">Children</string>
    <string name="romance_books_string">Romance</string>
    <string name="profile_string">profile</string>
    <string name="full_name_string">name family</string>
    <string name="save_string">save</string>
    <string name="first_name_string">first name</string>
    <string name="last_name_string">last name</string>
    <string name="image_about_description">image about description</string>
    <string name="about_book_string">You can buy grate books in bookstore App.</string>
    <string name="fragment_one">Fragment One</string>
    <string name="text_recognition_string">Text Recognition</string>
    <string name="camera_description">camera take image</string>
    <string name="text_view_text_recognition">recognized text</string>
    <string name="image_text_recognition_desc">image text recognition description</string>
    <string name="gallery_description">gallery image</string>
    <string name="first_constraint_set_example">constraint set one</string>
    <string name="second_constraint_set_example">constraint set two</string>
    <string name="place_holder_example">place holder</string>
    <string name="mars_image">mars</string>
    <string name="mars_text_view">Mars</string>
    <string name="title_text_string">Sillicon Valley</string>
    <string name="sillicon_text_desc_string">high-tech</string>
    <string name="desc_string">Silicon Valley, in the southern San Francisco Bay Area of California, is home to many start-up and global technology companies. Apple, Facebook and Google are among the most prominent. </string>
    <string name="place_holder_text_string">What is your android version?</string>
    <string name="android_version_n">N</string>
    <string name="android_version_p">P</string>
    <string name="android_version_q">Q</string>
    <string name="android_version_o">O</string>
    <string name="circle_positioning">Circle Positioning</string>
</resources>