<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".BmiActivity">

    <EditText
        android:id="@+id/weight_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:digits="0123456789."
        android:gravity="center"
        android:hint="@string/weight_in_kg"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/height_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:digits="0123456789."
        android:gravity="center"
        android:hint="@string/height_in_meter"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="calculateBmi"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/bmi_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        tools:text="20" />

    <ImageView
        android:id="@+id/bmi_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/bmi_image_desc"
        tools:src="@drawable/ic_obesity" />
</LinearLayout>